# openamundsen-climategenerator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
openamundsen_climategenerator/: __init__.py  cli.py  climategenerator.py  conf.py  report.py
openamundsen_climategenerator/data/: configschema.yml
