[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openamundsen-climategenerator"
dynamic = ["version"]
dependencies = [
  "numpy",
  "openamundsen",
  "pandas",
  "scipy",
  "xarray",
]

[project.optional-dependencies]
reports = ["matplotlib"]

[project.scripts]
openamundsen-climategenerator = "openamundsen_climategenerator.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "openamundsen_climategenerator._version.__version__"}

[tool.setuptools.packages.find]
include = ["openamundsen_climategenerator*"]

[tool.setuptools.package-data]
openamundsen_climategenerator = ["data/*.yml"]
