[metadata]
name = openamundsen-climategenerator

[options]
packages = find:
install_requires =
    numpy
    openamundsen
    pandas
    scipy
    xarray

[options.extras_require]
reports =
    matplotlib

[options.entry_points]
console_scripts =
    openamundsen-climategenerator = openamundsen_climategenerator.cli:main
